@@ -20,5 +20,5 @@
 // You should have received a copy of the GNU General Public License
 // along with RcppArmadillo.  If not, see <http://www.gnu.org/licenses/>.
 
-#define ARMA_HAS_CUBE @ARMA_HAS_CUBE@
+#define ARMA_VERSION_GE_070 @ARMA_VERSION_GE_070@
 #define ARMA_VERSION_GE_090 @ARMA_VERSION_GE_090@
