@@ -1,3 +1,11 @@
+2010-03-02  Dirk Eddelbuettel  <edd@dexter>
+
+	* src/RcppArmadillo.cpp: Added bare-bones 'fastLm' function
+	* R/fastLm.R: Added fastLm R wrapper for C++ fastLm
+	* man/fastLm.Rd: Added manual page
+	* inst/unitTests/runit.RcppArmadillo.R: Added unit test
+	* NAMESPACE: Made fastLm visible
+
 2010-03-02  Romain Francois <romain@r-enthusiasts.com>
 
 	* inst/include/RcppArmadillo.h: support for Armadillo 0.9.*
